[package]
name = "weather_proj"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilio = "1.0.0"
tokio = { version = "0.2.22", features = ["full"] }
openweather = { git = "https://github.com/caemor/openweather" }
rand = "0.8.4"
regex = "1.5.4"
